<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.junicode.otisapp.login.view.LoginActivity"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="291dp"
        android:layout_height="69dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_top_imageview_login"
        android:contentDescription="@string/logo_desc"
        app:srcCompat="@drawable/otis_logo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin_top_linearlayout_login"
            android:layout_marginHorizontal="@dimen/margin_horizontal_linearlayout_login"
            android:padding="@dimen/padding_linearlayout_login">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextLogin">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_username" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextLogin">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="end"
                android:text="@string/text_textview_forgot_password"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"/>


            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal_button_login"
                android:layout_marginTop="20dp"
                android:text="@string/text_button_login"
                android:theme="@style/RaisedButtonAccent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textColor="@color/colorAccent"
                android:gravity="center"
                android:text="@string/text_textview_dont_have_account" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:text="@string/text_textview_request_one"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"/>

            <ProgressBar
                android:id="@+id/progressBarLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>




</LinearLayout>
