<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".work.activity.NewPostActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:theme="@style/TextViewTitle"
        android:text="@string/text_textview_nuevo_post" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgPhoto"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:background="@drawable/button_shape"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:theme="@style/EditTextLogin">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_comment" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancelPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_button_cancel_post"
                android:theme="@style/RaisedButtonAccent" />

            <Button
                android:id="@+id/btnNewPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_button_new_post"
                android:theme="@style/RaisedButtonAccent" />

        </LinearLayout>

    </LinearLayout>
    </ScrollView>

</LinearLayout>