<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CompleteWorkActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/actionbar_toolbar"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:textColor="@color/colorAccent"
        android:textSize="18dp"
        android:textStyle="bold"
        android:text="@string/text_textview_concluir" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginHorizontal="@dimen/margin_linearlayout_work"
                    android:paddingBottom="@dimen/padding_vertical_linearlayout_work"
                    android:background="@drawable/button_shape">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="20dp"
                        android:layout_marginVertical="10dp"
                        android:textColor="@color/colorAccent"
                        android:textSize="14dp"
                        android:textStyle="bold"
                        android:text="@string/text_textview_formulario" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="20dp"
                        android:textColor="@color/colorAccent"
                        android:textSize="14dp"
                        android:text="@string/text_textview_estado_actual" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="20dp"
                        android:textColor="@color/colorAccent"
                        android:textSize="14dp"
                        android:text="@string/text_textview_fecha_termino" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="20dp"
                        android:textColor="@color/colorAccent"
                        android:textSize="14dp"
                        android:text="@string/text_textview_observacion" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_edittext_observacion"
                        android:layout_marginHorizontal="20dp" />

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/fabCamera"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="end|bottom"
                        android:theme="@style/RaisedButtonAccent"
                        android:src="@drawable/ic_action_add" />


                </LinearLayout>

            </ScrollView>

            <Button
                android:layout_width="@dimen/widht_RaisedButtonAccent"
                android:layout_height="@dimen/height_RaisedButtonAccent"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="10dp"
                android:text="@string/text_button_concluir"
                android:theme="@style/RaisedButtonDark" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>